 - [DEV-262] added group filtering for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.6

 - [ZBX-960] fixed confirmation questions in Configuration->Hosts->Host groups (Alexei)
 - [ZBX-975] TRUE/FALSE was replaced to Problems/Ok in Availability Report (Alexei)
 - [ZBX-137] added new indexes for tables: httptest, httptest, actions, dhosts, dservices, escalations (Alexei)
 - [ZBX-946] fixed drawing trigger line in graphs with trigger function "avg" (Artem)
 - [ZBX-968] added dropdown with time periods for IT services (Vedmak)
 - [ZBX-953] added informative note to zabbix_agentd --help output about user parameters and -t switch (Richlv)
 - [ZBX-962] removed "Found: 0" from media type config form (Vedmak)

Changes for 1.6.5

 - [ZBX-956] fixed js error on map link edit (Artem)
 - [ZBX-955] fixed bold lines in map links (Artem)
 - [ZBX-954] fixed various minor typos and formatting errors (Richlv)
 - [ZBX-886] removed duplicate and outdated strings from locales (Richlv)
 - [ZBX-952] increased max length of processed text and log data to 64KB (Sasha)
 - [ZBX-840] added displaying of text items in the latest data screen (Sasha)
 - [DEV-137] updated Japanese translation. Thanks to Kodai. (Alexei)
 - [ZBX-850] Zabbix version removed from locales (Artem)
 - [ZBX-947] fixed various typos and formatting errors in changelog (Richlv)
 - [ZBX-945] added comment about min/max values for RefreshActiveChecks param in agent config file (Sasha)
 - [ZBX-935] minor fixes for snmptrap.sh. Thanks to Joseph Womack. (Alexei)
 - [ZBX-942] fixed error message for server and proxy if cannot bind a port (Alexei)
 - [ZBX-940] fixed bug with not initialized array variable (Vedmak)