@@ -60,6 +60,7 @@ Changes for 1.7.0
 
 Changes for 1.6.6
 
+ - [ZBX-916] phrase 'delete selected' replaced by translatable S_DELETE_SELECTED (Alexei)
  - [ZBX-960] fixed confirmation questions in Configuration->Hosts->Host groups (Alexei)
  - [ZBX-975] TRUE/FALSE was replaced to Problems/Ok in Availability Report (Alexei)
  - [ZBX-137] added new indexes for tables: httptest, httptest, actions, dhosts, dservices, escalations (Alexei)
